<resources>
    <string name="app_name">Quản trị Zuke</string>
    <string name="login_text">Đăng nhập</string>
    <string name="changpass_text">Đổi mật khẩu</string>
    <string name="username_text">Tên đăng nhập</string>
    <string name="password_text">Mật khẩu</string>
    <string name="passwordNew_text">Mật khẩu mới</string>
    <string name="passwordConfirm_text">Xác nhận mật khẩu</string>
    <string name="titleMain">Quản lý kho</string>
    <string name="subtitleSP">Danh sách sản phẩm:</string>
    <string name="subtitleMGG">Danh sách mã giảm giá:</string>
    <string name="subtitleMKM">Danh sách mã khuyến mãi:</string>
    <string name="subtitleKH">Danh sách khách hàng:</string>
    <string name="subtitleLSP">Danh sách loại sản phẩm:</string>
    <string name="subtitleH">Danh sách hãng:</string>
    <string name="amountSP">5 từ 15</string>
    <string name="titleLayout">Danh sách sản phẩm</string>
    <string name="titleLayoutKM">Danh sách khuyến mãi</string>
    <string name="titleLayoutTTKM">Thông tin khuyến mãi</string>
    <string name="titleLayoutLSP">Danh sách loại sản phẩm</string>
    <string name="titleDetailLSP">Chi tiết loại sản phẩm</string>
    <string name="titleLayoutH">Danh sách hãng</string>
    <string name="titleLayoutCTKM">Chi tiết khuyến mãi</string>
    <string name="titleLayoutXLDH">Xử lý đơn hàng</string>
    <string name="titleLayoutDPH">Điều phối hàng</string>
    <string name="titleDetailH">Chi tiết hãng</string>
    <string name="titleDetaiCTDH">Chi tiết đơn hàng</string>
    <string name="buttonBack">Trở lại</string>
    <string name="buttonSave">Lưu</string>
    <string name="buttonCancel">Huỷ</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="subtitleUS">qlk-1</string>
    <string name="contentUS">Quản lý kho</string>
    <string name="title1">Quản lý sản phẩm</string>
    <string name="title2">Quản lý khuyến mãi</string>
    <string name="title3">Điều phối hàng</string>
    <string name="title4">Quản lý loại sản phẩm</string>
    <string name="title5">Quản lý hãng</string>
    <string name="title6">Quản lý mã giảm giá</string>
    <string name="title8">Danh sách mã giảm giá</string>
    <string name="title7">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="changePass">Đổi mật khẩu</string>
    <string name="masp">Mã sản phẩm</string>
    <string name="tensp">Tên sản phẩm</string>
    <string name="motasp">Thêm mô tả cho sản phẩm</string>
    <string name="gianhap">Giá nhập</string>
    <string name="giaban">Giá bán</string>
    <string name="btnAll">Chọn tất cả</string>
    <string name="default_iamge">android.graphics.drawable.AdaptiveIconDrawable@f20e8ad</string>
    <string name="delete">XOÁ</string>

    <!-- Dialog -->
    <string name="titleUpdate">Cập nhật</string>
    <string name="titleAdd">Thêm</string>
    <string name="title">THÔNG BÁO</string>
    <string name="okay">OK</string>
    <string name="yes">XÁC NHẬN</string>
    <string name="no">HUỶ</string>
    <string name="title9">Chi tiết sản phẩm</string>
    <string name="title10">Chi tiết mã giảm giá</string>
    <string name="doimk">Đổi mật khẩu</string>

    <!--  Dialog  -->
    <string name="titlePercent">Cập nhật</string>
    <string name="warning">warning</string>
    <string name="error">error</string>
    <string name="dummy_text">Loren Ipsum is simple dummy of the printing and type setting industry</string>
    <string name="title11">Chi tiết hoá đơn</string>
    <string name="titleDSTK">Danh sách tài khoản</string>
    <string name="titleTK">Thống kê</string>
    <string name="titleDGBL"><![CDATA[Đánh giá & bình luận]]></string>
    <string name="titleLSDH">Lịch sử đơn hàng</string>
    <string name="titleTKDT">Thống kê doanh thu</string>

    <!--  Array  -->
    <string-array name="ngay">
        <item>Hôm nay</item>
        <item>13/10/2021</item>
    </string-array>
    <string-array name="position">
        <item>Quản trị viên</item>
        <item>Nhân viên bán hàng</item>
        <item>Quản trị viên</item>
        <item>Quản trị viên</item>
        <item>Quản trị viên</item>

    </string-array>
    <string-array name="thang">
        <item>Tất cả</item>
        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>

    <string-array name="loaikhachhang">
        <item>Tất cả</item>
        <item>Khách hàng thường</item>
        <item>Khách hàng Bạc</item>
        <item>Khách hàng Vàng</item>
        <item>Khách hàng Kim Cương</item>
        <item>Sinh nhật khách hàng</item>
    </string-array>

    <string-array name="spinrating">
        <item>Cao nhất</item>
        <item>Mới nhất</item>
        <item>Cũ nhất</item>
        <item>Thấp nhất</item>
    </string-array>

    <string-array name="loaisp">
        <item>Laptop</item>
        <item>Máy tính</item>
        <item>Điện thoại</item>
    </string-array>

    <string-array name="hang">
        <item>Asus</item>
        <item>Samsung</item>
        <item>Apple</item>
    </string-array>

    <string-array name="mau">
        <item></item>
        <item>Đen</item>
        <item>Trắng</item>
        <item>Đỏ</item>
        <item>Xám</item>
        <item>Xanh lục</item>
        <item>Xanh dương</item>
        <item>Tím</item>
    </string-array>

    <string-array name="dungluong">
        <item></item>
        <item>2GB</item>
        <item>4GB</item>
        <item>8GB</item>
        <item>16GB</item>
        <item>32GB</item>
        <item>128GB</item>
        <item>256GB</item>
        <item>512GB</item>
        <item>1TB</item>
    </string-array>

    <string-array name="giamgia">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
    </string-array>

    <string-array name="sanpham">
        <item>Asus Nitro N5</item>
        <item>Iphone 13</item>
        <item>Iphone X</item>
    </string-array>

    <string-array name="shipper">
        <item>N.V.An - KV1</item>
        <item>N.V.Bình - KV2</item>
        <item>N.V.Tiến - KV3</item>
    </string-array>

    <string-array name="quyen">
        <item>Tất cả</item>
        <item>Nhân viên bán hàng</item>
        <item>Nhân viên giao hàng</item>
        <item>Quản lý kho</item>
    </string-array>

</resources>