<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qlnv"
            android:icon="@drawable/baseline_person_24"
            android:title="Quản lý nhân viên" />
        <item
            android:id="@+id/nav_dd"
            android:icon="@drawable/baseline_view_list_24"
            android:title="Điểm danh" />

        <item android:title="@string/title7">
            <menu>
                <item
                    android:id="@+id/nav_dx"
                    android:icon="@drawable/baseline_login_black_24"
                    android:title="@string/logout" />
                <item
                    android:id="@+id/nav_dmk"
                    android:icon="@drawable/baseline_key_black_24"
                    android:title="@string/changePass" />
            </menu>
        </item>
    </group>
</menu>