<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.edu.tdc.ltdd2.activitys.ChangePasswordActivity">

    <include
        android:id="@+id/include"
        layout="@layout/appbar_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changpass_text"
        android:textColor="@color/pink"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/parent"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/show_password_selector">

            <EditText
                android:id="@+id/edtPass"
                style="@style/modifiedEditText"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/parent"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/show_password_selector">

            <EditText
                android:id="@+id/edtPassNew"
                style="@style/modifiedEditText"
                android:hint="@string/passwordNew_text"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/parent"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/show_password_selector">

            <EditText
                android:id="@+id/edtPassConfirm"
                style="@style/modifiedEditText"
                android:hint="@string/passwordConfirm_text"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_login"
            android:padding="10dp"
            android:text="@string/changpass_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>