<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activitys.DetailProductActivity">

        <include
            android:id="@+id/include"
            layout="@layout/appbar_1"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_marginTop="5dp"
                android:layout_height="120dp"
                android:contentDescription="TODO"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/edtMSP"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:padding="4dp"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:hint="@string/masp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/edtTSP"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:padding="4dp"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:hint="@string/tensp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtMSP" />

            <Spinner
                android:id="@+id/spinner_cata"
                style="@style/CustomSpinner"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_spinner"
                android:entries="@array/loaisp"
                app:layout_constraintEnd_toStartOf="@+id/spinner_manu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTSP" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Spinner
                android:id="@+id/spinner_manu"
                style="@style/CustomSpinner"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_spinner"
                android:entries="@array/hang"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/edtTSP" />

            <EditText
                android:id="@+id/edtMT"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_border_edittext"
                android:cursorVisible="false"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/motasp"
                android:inputType="textMultiLine"
                android:lines="8"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_manu" />

            <Spinner
                android:id="@+id/spinner_color"
                style="@style/CustomSpinner"
                android:layout_margin="5dp"
                android:background="@drawable/bg_spinner"
                android:entries="@array/mau"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtMT" />

            <Spinner
                android:id="@+id/spinner_size"
                style="@style/CustomSpinner"
                android:layout_margin="5dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_spinner"
                android:entries="@array/dungluong"
                app:layout_constraintStart_toEndOf="@+id/spinner_color"
                app:layout_constraintTop_toBottomOf="@+id/edtMT" />

            <EditText
                android:id="@+id/edtSL"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:gravity="center|right"
                android:hint="0"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinner_size"
                app:layout_constraintTop_toBottomOf="@+id/edtMT" />

            <EditText
                android:id="@+id/edtGN"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:padding="4dp"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:hint="@string/gianhap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_size" />

            <EditText
                android:id="@+id/edtGB"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:hint="@string/giaban"
                android:padding="4dp"
                app:layout_constraintStart_toEndOf="@+id/edtGN"
                app:layout_constraintTop_toBottomOf="@+id/spinner_size" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <!-- Left Menu -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/drawer_view" />

</androidx.drawerlayout.widget.DrawerLayout>